# CI4251

./: .gitignore
retos/1/: reto1_0538235.lhs
tareas/1/: tarea01_0538235.lhs
tareas/2/: tarea02_0538235.lhs
tareas/3/: tarea03_0538235.lhs
tareas/4/: Makefile  h.hs  rtree.hs
tareas/4/Data/: Hilbert.hs  RTree.hs  RTree.hs-boot  Rectangle.hs
tareas/4/Data/Function/: Util.hs
tareas/4/Data/Maybe/: Util.hs
tareas/4/Data/RTree/: Zipper.hs  Zipper.hs-boot
tareas/5/: Makefile  TODO  Unisex.hs  tarea-05.lhs  tarea05_0538235.lhs
tareas/6/: .gitignore  collapse.cabal  tarea-06.tex  tarea06_0538235.hs
tareas/6/dph/: Vectorised.hs  collapse.cabal
tareas/6/src/collapse/: Main.hs
tareas/6/src/dcollapse/: Main.hs  Vectorised.hs
tareas/6/src/lib/: Collapse.hs
tareas/6/src/pcollapse/: Main.hs
