Name         : collapse
Version      : 0
Author       : Manuel Gómez <targen@gmail.com>
Build-Type   : Simple
Cabal-Version: >=1.8
Description  : Solución a la tarea 6 de CI4251 en Abril–Julio 2012 en la Universidad Simón Bolívar.

Executable collapse
  Build-depends : base == 4.5.*
  Main-is       : Main.hs
  other-modules : Collapse
  hs-source-dirs: src/collapse
                  src/lib
  ghc-options   : -rtsopts -threaded -fllvm -O3

Executable pcollapse
  Build-depends : base == 4.5.*,
                  parallel
  Main-is       : Main.hs
  other-modules : Collapse
  hs-source-dirs: src/pcollapse
                  src/lib
  ghc-options   : -rtsopts -threaded -fllvm -O3

Executable dcollapse
  Build-depends : base            == 4.5.*  ,
                  dph-base        == 0.6.1.*,
                  dph-prim-par    == 0.6.1.*,
                  dph-lifted-vseg == 0.6.1.*
  Main-is       : Main.hs
  other-modules : Vectorised
  hs-source-dirs: src/dcollapse
  ghc-options   : -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fsimpl-tick-factor=1000
